# pnd-agents

./: .gitignore  ARCHITECTURE.md  CLAUDE_USAGE.md  DOCUMENTATION_SUMMARY.md  INSTALLATION.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  SETUP.md  SETUP_DIAGRAM.md  azure-pipelines.yml  main.py  package.json  pnpm-workspace.yaml  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.claude/agents/: func-test-auto.md  qa.md  task-manager.md  test-auto-func.md  test-case-writing.md  unit-test.md
.claude/commands/: amplience-placement.md  amplience.md  analytics.md  automation-test.md  backend.md  bx-scan.md  code-review.md  commerce.md  create-functional-automation-test.md  exec-summary.md  figma.md  frontend.md  jira-status.md  performance.md  prd-to-jira.md  qa.md  review-pr.md  roadmap-review.md  sonar.md  task-manager.md  tech-debt.md  test-analysis-design.md  (+1 more)
agents/: broken_experience_detector_agent.py  commerce_agent.py  figma_reader_agent.py  qa_agent.py  sonar_validation_agent.py  task_manager_agent.py  unit_test_agent.py
api/: README.md  pyproject.toml
api/src/: __init__.py  main.py
api/src/adapters/: __init__.py
api/src/models/: agent.py
api/src/routes/: agents.py
api/src/services/: agent_discovery.py
config/: agent-workflow.json
docs/: Func_Test_Auto_Agent_Overview.md  Test_Auto_Agent_Func_Overview.md  Test_Case_Writing_Agent_Overview.md  agents-overview.md  architecture.md  claude-usage.md  delivery-reports-guide.md  faq.md  how-agents-work.md  index.md  publishing.md  quick-reference.md  setup-diagram.md  setup.md  test_analysis_design.md  usage-guide.md  using-agents-without-mcp.md
examples/: CODE_SINGULARITY_DEMO.md  agent_demo.py  code_singularity_demo.py  code_singularity_e2e_demo.py  create-amplience-content-type.md  create-component-from-figma.md  performance-optimization.md
mcp/: analytics_mcp_server.py
mcp-config/: agents.config.json  claude.config.json
meta-agent/: README.md  package-lock.json  package.json
pnd_agents/: __main__.py  cli.py
schemas/: agent.schema.yaml
scripts/: generate_report.py
tests/: __init__.py  test_analytics_agent.py  test_analytics_store.py  test_jira_client.py
tools/: __init__.py  analytics_store.py  command_runner.py  filesystem.py  har_analyzer.py  registry.py
ui/: README.md  package.json
workflow/: __init__.py  agent_dispatcher.py  workflow_engine.py  workflow_rules.json
workflows/: agent_dispatcher.py  workflow_engine.py  workflow_rules.json
(+246 files in other folders)
