[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnd-agents"
version = "1.0.0"
description = "PG AI Squad - MCP-compatible agents for Pandora Group development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pandora Group", email = "tech@pandora.net"}
]
keywords = ["mcp", "agents", "ai", "claude", "pandora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "orjson>=3.9.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "playwright>=1.41.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
pnd-agents = "pnd_agents.cli:main"

[project.urls]
Homepage = "https://github.com/shvee-pandora/pnd-agents"
Repository = "https://github.com/shvee-pandora/pnd-agents"
Documentation = "https://github.com/shvee-pandora/pnd-agents#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["pnd_agents*", "agents*", "tools*", "workflow*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
